# kustomize-pass

./: Cargo.toml  README.md  changelog.md  example.yml  schema.openapi.yaml
.github/workflows/: main.yml  release.yml
.woodpecker/: test.yml
examples/: existing_resources.yml  generator.yml  kustomization.yml
hack/: build_ubuntu_bin.sh
src/: cli.rs  exec_krm_function.rs  git_util.rs  krm_types.rs  main.rs  print_schema.rs  secret_conversion.rs
src/k8s_types/: field_ref.rs  file_ref.rs  generator_behavior.rs  k8s_secret.rs  krm_result.rs  mod.rs  object_meta.rs  pass_secret.rs  pass_source.rs  resource_list.rs  resource_ref.rs  type_id.rs
