[package]
name = "kustomize-pass"
description = "kustomize generator and transformer plugin for pass managed secrets"
version = "0.0.1"
authors = ["Finn Sell <dev@finn-thorben.me>"]
edition = "2021"
repository = "https://github.com/ftsell/kustomize-pass"
license = "MIT"
keywords = ["kustomize", "pass", "kubernetes", "secret", "password"]
categories = ["command-line-utilities", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.4", features = ["derive"]}
flexi_logger = "0.22.5"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
