[package]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "kustomize-pass"
description = "kustomize generator and transformer plugin for pass managed secrets"
version = "0.0.1"
authors = ["Finn Sell <dev@finn-thorben.me>"]
edition = "2021"
repository = "https://github.com/ftsell/kustomize-pass"
license = "MIT"
keywords = ["kustomize", "pass", "kubernetes", "secret", "password"]
categories = ["command-line-utilities", "config"]

[workspace.metadata.release]
pre-release-commit-message = "bump to version v{{version}}"
tag-name = "v{{version}}"
tag-message = "release {{crate_name}} v{{version}}"
post-release-commit-message = "start next development iteration {{next_version}}"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.2.5", features = ["derive"]}
flexi_logger = "0.22.5"
libpass = "0.3.0"
log = "0.4.17"
okapi = "0.7.0-rc.1"
schemars = { version = "0.8.10", features = [ "serde_yaml" ] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"

[patch.crates-io]
schemars = { git = "https://github.com/ftsell/schemars.git", branch = "feature/serde_yaml_schema_impl" }
