[package]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "kustomize-pass"
description = "kustomize generator and transformer plugin for pass managed secrets"
documentation = "https://docs.rs/kustomize-pass"
version = "0.3.0"
authors = ["Finn Sell <dev@finn-thorben.me>"]
edition = "2021"
repository = "https://github.com/ftsell/kustomize-pass"
license = "MIT"
keywords = ["kustomize", "pass", "kubernetes", "secret", "password"]
categories = ["command-line-utilities", "config"]

[profile.release]
lto = true

[workspace.metadata.release]
pre-release-commit-message = "bump to version v{{version}}"
tag-name = "v{{version}}"
tag-message = "release {{crate_name}} v{{version}}"
post-release-commit-message = "start next development iteration {{next_version}}"

[dependencies]
anyhow = "1.0.57"
base64 = "0.13.0"
blake2 = "0.10.4"
clap = { version = "3.2.6", features = ["derive"]}
directories = "4.0.1"
flexi_logger = "0.22.5"
git2 = "0.14.4"
hex = "0.4.3"
libpass = "0.3.0"
log = "0.4.17"
okapi = "0.7.0-rc.1"
schemars = "0.8.10"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
